--- a/src_electron/tsconfig.json
+++ b/src_electron/tsconfig.json
@@ -7,6 +7,8 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "outDir": "../build/electron"
+        ,"skipLibCheck": true
+        ,"types": ["node"]
     },
     "include": [
         "."
